# HTML-Page-Generator

./: Makefile  README.md  pyproject.toml
page_generator/: asgi.py  parser.py  settings.py  urls.py  views.py  wsgi.py
page_generator/static/js/: new_labels.js
page_generator/templates/: header.html  main.html  test.html  test_generation.html
page_generator/templatetags/: api_docs_tag.py
